--- a/Project/client/HTML/AboutMe.html
+++ b/Project/client/HTML/AboutMe.html
@@ -30,9 +30,9 @@
             <br>
           <h10 style="font-size:40px;">About Me</h10>
           <br>
-          <p10>My name is <i>Zoey</i>. I'm <b> 21 </b>years old. Originally i'm from <b>Santa Monica</b>. <br>
-            In addtional to baking and cooking , i'm enjoying wave surfing, swimming and vollyball  <br>
-            Meanwhile I'm a law student in <b>UCLA University</b> <br> 
+          <p10>My name is <i>###</i>. I'm <b>###</b>years old. Originally i'm from <b>###</b>. <br>
+            In addtional to baking and cooking , i'm enjoying ###, ### and ###  <br>
+            Meanwhile I'm a law student in <b>###</b> <br> 
             I have estblished my Baking Company back in 2017 with my big love for baking. 
             <br> It's all started when i was nine years old. I needed to make achocolate cake and i nailed that. ever since i've never stopped cooking. 
             <br> when i was 19 years old i've decided to open <b><i>MYFIRSTBAKERY</i></b> as a total hobbie.<br>
