--- a/Project/client/HTML/RandomPage.html
+++ b/Project/client/HTML/RandomPage.html
@@ -8,6 +8,7 @@
     <title>Recipe Of The WEEK</title>
 </head>
 <body>
+    
 <br><br>
         <div class="header">
         <h2><i>Baking website and Desserts store</i></h2>
@@ -30,11 +31,12 @@
             <h3>
                 Feeling hungry?
             </h3>
+            <button onclick="RandomRecipeGenerator()"> 🍔 </button>
             <h5>Get a random meal by clicking below</h5>
-            <button class="button-primary" id="get_meal"> Get Meal 🍔</button>
+            <p id="RecpLink"> </p>
         </div>
         <div id="meal" class="row meal"></div>
     </div>
-    <script type=text\javscript src=""> </script>
+<script type=text\javscript src="../JS/fetchForRadomGenrator.js"> </script>
 </body>
 </html>
