finished Recipes Generator

--- a/Project/client/HTML/AboutMe.html
+++ b/Project/client/HTML/AboutMe.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
         <link rel="stylesheet" type="text/css" href="../CSS/main.css">
 </head>
 <body>             
@@ -20,12 +19,10 @@
                         <a href="file:///Users/lidor/client/HTML/AboutMe.html" target=_blank>  About Us </a>
                         <a href="http://127.0.0.1:5500/client/HTML/contact.html">  Contact     </a>
                         <a href="http://127.0.0.1:5500/client/HTML/CheckOutPage.html"> Order From us</a>
-                        <a href="http://127.0.0.1:5500/client/HTML/RandomPage.html" target="_blank"> RECIPE of the week </a>
+                        <a href="http://127.0.0.1:5500/Project/client/HTML/RandomRecipePage.html" target="_blank"> Meal Generator </a>
                         <!--<input type="image" src="pannier-grand.png"  alt="submit" width="30" height="30" align="right"> -->
-
-                </div>     
+                </div>  
                 <br>
-  
         <div class="side">
             <br>
           <h10 style="font-size:40px;">About Me</h10>
