--- a/Project/client/HTML/CheckOutPage.html
+++ b/Project/client/HTML/CheckOutPage.html
@@ -21,7 +21,7 @@
                         <a href="file:///Users/lidor/client/HTML/AboutMe.html" target=_blank>  About Us </a>
                         <a href="http://127.0.0.1:5500/client/HTML/contact.html">  Contact     </a>
                         <a href="http://127.0.0.1:5500/client/HTML/CheckOutPage.html"> Order From us</a>
-                        <a href="http://127.0.0.1:5500/client/HTML/RandomPage.html" target="_blank"> RECIPE of the week </a>
+                        <a href="http://127.0.0.1:5500/Project/client/HTML/RandomRecipePage.html" target="_blank"> Meal Generator </a>
                     </div>     
                     <br>
 
