--- a/Project/client/HTML/HomePage.html
+++ b/Project/client/HTML/HomePage.html
@@ -24,7 +24,7 @@
                     <a href="file:///Users/lidor/client/HTML/AboutMe.html" target=_blank>  About Us </a>
                     <a href="http://127.0.0.1:5500/client/HTML/contact.html">  Contact     </a>
                     <a href="http://127.0.0.1:5500/client/HTML/CheckOutPage.html"> Order From us</a>
-                    <a href="http://127.0.0.1:5500/client/HTML/RandomPage.html" target="_blank"> RECIPE of the week </a>
+                    <a href="http://127.0.0.1:5500/Project/client/HTML/RandomRecipePage.html" target="_blank"> Meal Generator </a>
                         <!-- src="../images/pannier-grand.png" width="30" height="30" align="right"
                             <input type="image" src="pannier-grand.png"  alt="submit" width="30" height="30" align="right"> -->
 
