--- a/Project/client/HTML/RandomRecipePage.html
+++ b/Project/client/HTML/RandomRecipePage.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../CSS/main.css">
-    <title>Recipe Of The WEEK</title>
+    <title>Document</title>
 </head>
 <body>
-    
-<br><br>
+    <br><br>
         <div class="header">
         <h2><i>Baking website and Desserts store</i></h2>
         <div class="description">
@@ -24,19 +22,16 @@
                     <a href="file:///Users/lidor/client/HTML/AboutMe.html" target=_blank>  About Us </a>
                     <a href="http://127.0.0.1:5500/client/HTML/contact.html">  Contact     </a>
                     <a href="http://127.0.0.1:5500/client/HTML/CheckOutPage.html"> Order From us</a>
-                    <a href="http://127.0.0.1:5500/client/HTML/RandomPage.html" target="_blank"> RECIPE of the week </a>
-    </div>
-        <div class="container">
-        <div class="row text-center">
-            <h3>
-                Feeling hungry?
-            </h3>
-            <button onclick="RandomRecipeGenerator()"> 🍔 </button>
-            <h5>Get a random meal by clicking below</h5>
-            <p id="RecpLink"> </p>
-        </div>
-        <div id="meal" class="row meal"></div>
-    </div>
-<script type=text\javscript src="../JS/fetchForRadomGenrator.js"> </script>
+                    <a href="http://127.0.0.1:5500/Project/client/HTML/RandomRecipePage.html" target="_blank"> Meal Generator </a>
+                        <!-- src="../images/pannier-grand.png" width="30" height="30" align="right"
+                            <input type="image" src="pannier-grand.png"  alt="submit" width="30" height="30" align="right"> -->
+
+                </div>     
+                <br>
+
+    <h5> Feeling hungry? 🍔 </h5>
+    <h5> Get a random meal by clicking below </h5>
+    <button onclick="RandomRecipesGenerator()"> Get Meal 🍔 </button>
+    <script type="text/javascript" src="../JS/fetchForRadomGenrator.js"></script>
 </body>
 </html>
