--- a/Project/client/HTML/OrderConfirmationPage.html
+++ b/Project/client/HTML/OrderConfirmationPage.html
@@ -11,7 +11,7 @@
     <h2> Thank You For Chosing Us!</h2>
     <p> Your Order has been confirmed!</p>
     <p> You can come and pick up your order a week from now or when you get our SMS</p>
-    <p> To order a delivery (with addtional payment) please press here --> <button type="submit" class="Schudale"> Schudale A Delivery</button></p>
+    <p> To order a delivery (with addtional payment) please press here --> <button type="submit" class="Schudale"><a href = "http://127.0.0.1:5500/client/HTML/Delivary.html"> Schudale A Delivery </a></button></p>
     <p> Feel Free to contact us with any problem</p>
 
 </body>
